[FEAT] 메모 Public/Private 구분 기능 구현